--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   cloud_firestore: ^4.15.8
   firebase_core: ^2.27.0
+  flutter_dialogs: ^3.0.0
 
 dev_dependencies:
   flutter_test:
