--- a/android/app/src/debug/AndroidManifest.xml
+++ b/android/app/src/debug/AndroidManifest.xml
@@ -5,3 +5,11 @@
     -->
     <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
+
+<intent-filter>
+    <action android:name="android.intent.action.VIEW" />
+    <category android:name="android.intent.category.DEFAULT" />
+    <category android:name="android.intent.category.BROWSABLE" />
+    <data android:scheme="http" android:host="https://meet.google.com/xvh-vnhp-rci" />
+</intent-filter>
+
